--- a/ImmichFrame.Android/ImmichFrame.Android.csproj
+++ b/ImmichFrame.Android/ImmichFrame.Android.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Android" Version="11.2.0-beta1" />
+    <PackageReference Include="WebView.Avalonia.Android" Version="11.0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
