--- a/ImmichFrame.Android/app/src/main/AndroidManifest.xml
+++ b/ImmichFrame.Android/app/src/main/AndroidManifest.xml
@@ -7,17 +7,33 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-    <uses-feature android:name="android.software.leanback" android:required="false" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
 
     <application
-        android:icon="@mipmap/immich_frame"
         android:banner="@mipmap/immich_banner"
+        android:icon="@mipmap/immich_frame"
         android:label="ImmichFrame"
         android:roundIcon="@mipmap/immich_frame_round"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <service
+            android:name=".ScreenSaverService"
+            android:icon="@mipmap/immich_frame"
+            android:label="ImmichFrame"
+            android:exported="true"
+            android:permission="android.permission.BIND_DREAM_SERVICE">
+        <intent-filter>
+            <action android:name="android.service.dreams.DreamService" />
+        </intent-filter>
+        </service>
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
@@ -27,10 +43,12 @@
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
