Revert "Webview use other nuget"
This reverts commit 44f0ce1d98a9fde5210adae8cff2fe86f92c851a.

--- a/ImmichFrame.Desktop/ImmichFrame.Desktop.csproj
+++ b/ImmichFrame.Desktop/ImmichFrame.Desktop.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="11.2.0" />
+    <PackageReference Include="WebView.Avalonia.Desktop" Version="11.0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
