--- a/ImmichFrame/ImmichFrame.csproj
+++ b/ImmichFrame/ImmichFrame.csproj
@@ -36,7 +36,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="WebViewControl-Avalonia" Version="3.120.7" />
+    <PackageReference Include="WebView.Avalonia" Version="11.0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
